# Profitix

./: README.md  gitignore
documentation/: profitix_documetation.docx  profitix_presentation.pptx
profitix/: CMakeLists.txt  budget.cpp  budget.h  clearScreen.cpp  clearScreen.h  dashboard.cpp  dashboard.h  expense.cpp  expense.h  globals.h  income.cpp  income.h  main.cpp  mainMenu.cpp  mainMenu.h  precompiler.h  profitix.sln  profitix.vcxproj  profitix.vcxproj.filters  report.cpp  report.h  user.cpp
